--- a/Portifolio.Webapi/Portifolio.Webapi.csproj
+++ b/Portifolio.Webapi/Portifolio.Webapi.csproj
@@ -6,4 +6,26 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Compile Remove="Persistence\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="Persistence\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Remove="Persistence\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Persistence\**" />
+      <None Remove="Common\Pesistence\produtos.db" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.2" />
+    </ItemGroup>
+
 </Project>
