--- a/Portifolio.Webapi/Portifolio.Webapi.csproj
+++ b/Portifolio.Webapi/Portifolio.Webapi.csproj
@@ -24,8 +24,12 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Carter" Version="8.0.0" />
+      <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.2" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.2" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
 </Project>
