--- a/Portifolio.Webapi/Portifolio.Webapi.csproj
+++ b/Portifolio.Webapi/Portifolio.Webapi.csproj
@@ -7,29 +7,26 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Compile Remove="Persistence\**" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <EmbeddedResource Remove="Persistence\**" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Content Remove="Persistence\**" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <None Remove="Persistence\**" />
       <None Remove="Common\Pesistence\produtos.db" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Carter" Version="8.0.0" />
+      <PackageReference Include="FluentAssertions" Version="6.12.0" />
+      <PackageReference Include="FluentValidation" Version="11.9.0" />
+      <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
       <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.2" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="Persistence\produtos.db" />
+      <Content Include="Persistence\produtos.db-shm" />
+      <Content Include="Persistence\produtos.db-wal" />
     </ItemGroup>
 
 </Project>
