add email service

--- a/Portifolio.Webapi/appsettings.Development.json
+++ b/Portifolio.Webapi/appsettings.Development.json
@@ -3,6 +3,14 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "SmtpSettings": {
+      "Server": "",
+      "Port": 465,
+      "SenderName": "",
+      "SenderEmail": "",
+      "Username": "",
+      "Password": ""
     }
   }
 }
