--- a/Portifolio.Webapi/appsettings.json
+++ b/Portifolio.Webapi/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SmtpSettings": {
+    "Server": "",
+    "Port": 465,
+    "SenderName": "",
+    "SenderEmail": "",
+    "Username": "",
+    "Password": ""
+  }
 }
